
syntax = "proto3";
package user;

option go_package = "./user";

//分组 goctl rpc protoc user.proto --go_out=. --go-grpc_out=. --zrpc_out=. -m
//goctl rpc protoc user.proto --go_out=. --go-grpc_out=. --zrpc_out=.

message UserInfo {
    int64 Id=1; //用户ID
    string Username=2; //用户名
    string Password=3; //用户密码，MD5加密
    string Phone=4; //手机号
    string Question = 5;   //找回密码问题
    string Answer = 6;     //找回密码答案
    int64  CreateTime = 7;  //创建时间
    int64  UpdateTime = 8;  //更新时间
    string Name=9;          //姓名
    string Nick=10;         //昵称
    string Sex=11;          //性别
}

//注册用户
message RegisterUserReq {
    string Username=1; //用户名
    string Password=2; //用户密码，MD5加密
    string Phone=3; //手机号
}

message RegisterUserRes {

}
//用户登录
message LoginRequest {
    string Username = 1;
    string Password = 2;
}

message LoginResponse {
    int64 Id=1;
    string Username = 2;
    string Phone = 3;
}
// 用户信息
message UserInfoRequest {
    int64 Id=1;
}

message UserInfoResponse {
    UserInfo user = 1;
}

// 添加用户收货地址
message UserRevAddrAddReq {
    int64 Uid=1; //uid
    string Name=2; //收货人名称
    string Phone=3; //手机号
    bool  Isdefault = 4;   //是否为默认地址
    string Postcode = 5;      //邮政编码
    string Province = 6;    //省份/直辖市
    string City = 7;        //城市
    string Region = 8;         //区
    string DetailAddress = 9;  //详细地址(街道)
}

message UserRevAddrAddRes {

}

//获取收获地址列表
message UserRevAddrListReq {
    int64 Uid =1;
}

//地址信息
message  UserRevAddr {
    int64 id = 1;
    int64  uid = 2;   //uid
    string Name = 3;     //收货人名称
    string Phone = 4;       //手机号
    bool  Isdefault = 5;   //是否为默认地址
    string Postcode = 6;      //邮政编码
    string Province = 7;    //省份/直辖市
    string City = 8;        //城市
    string Region = 9;         //区
    string DetailAddress = 10;  //详细地址(街道)
    bool IsDelete = 11;
    int64 CreateTime = 12;
    int64 UpdateTime = 13;
}

//地址列表
message UserRevAddrListRes {
    repeated UserRevAddr list=1;
}

//更新收获地址
message UserRevAddrEditReq {
    int64  Id = 1;
    string Name = 2;   //收货人名称
    string Phone = 3;   //手机号
    bool Isdefault = 4;   //是否为默认地址
    string Postcode = 5;   //邮政编码
    string Province = 6;   //省份/直辖市
    string City = 7;   //城市
    string Region = 8;   //区
    string DetailAddress = 9;   //详细地址(街道)
}

message UserRevAddrEditRes {

}

//删除地址
message  UserRevAddrDelReq {
    int64 Id = 1;
}
message UserRevAddrDelRes {
}

// 添加收藏
message UserCollectionAddReq {
    int64   Uid = 1;              // 用户id
    int64   Productid = 2;        // 商品id
}
message UserCollectionAddRes {

}
// 删除收藏
message UserCollectionDelReq {
    int64   Id = 1;  // 收藏Id
}

message UserCollectionDelRes {}

// 收藏列表
message UserCollectionListReq {
    int64 Uid=1;  // 用户id
}

message UserCollectionListRes {
    repeated int64 list=1;
}

//根据主键id,查询收获地址
message UserRevAddrInfoReq {
    int64 Id = 1; //
}

service User {
    //登录
    rpc Login(LoginRequest) returns (LoginResponse);
    //获得用户信息
    rpc UserInfo(UserInfoRequest) returns(UserInfoResponse);
    //注册用户
    rpc RegisterUser(RegisterUserReq) returns (RegisterUserRes);
    
    //添加收获地址
    rpc AddUserRevAddr(UserRevAddrAddReq) returns (UserRevAddrAddRes);
    //编辑收获地址
    rpc EditUserRevAddr(UserRevAddrEditReq) returns (UserRevAddrEditRes);
    //删除收获地址
    rpc DelUserRevAddr(UserRevAddrDelReq) returns(UserCollectionDelRes);
    //获取收获地址列表
    rpc getUserRevAddrList(UserRevAddrListReq) returns(UserRevAddrListRes);

    // 添加收藏
    rpc AddUserCollection(UserCollectionAddReq) returns(UserCollectionAddRes);
    //删除收藏
    rpc DelUserCollection(UserCollectionDelReq) returns(UserCollectionDelRes);
    // 收藏列表
    rpc GetUserCollectionList(UserCollectionListReq) returns(UserCollectionListRes);
    
    //根据主键id,查询收获地址
    rpc getUserRevAddrInfo(UserRevAddrInfoReq) returns(UserRevAddr);
}

